# multimodal-db

./: .gitignore  ARCHITECTURE.md  DEMO.md  LICENSE  QUICKSTART.md  README.md  STATUS.md  pyproject.toml  requirements.txt  run_cli.py  websocket_bridge.py
data/: .gitkeep
data/qdrant_db/test_hybrid_search/: meta.json
data/qdrant_db/test_qdrant_full/: meta.json
docs/: AGENT_CONFIGURATION_SYSTEM.md  ARCHITECTURE_DIAGRAMS.md  DEPENDENCY_FIX.md  EXAMPLES.md  FASTAPI_ROADMAP.md  GRADIO_UI_UPGRADE.md  HOW_IT_WORKS_TOGETHER.md  INTEGRATION_ANALYSIS.md  INTEGRATION_SUMMARY.md  NEXTJS_WEBUI_INTEGRATION.md  POLARS_QUERY_ENGINE_INSTALLATION.md  POLARS_QUERY_ENGINE_REVIEW.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START_UI.md  RAZOR_SHARP_COMPLETE.md  README.md  TESTING.md  UI_UPGRADE_SUMMARY.md  WEBUI_FEATURE_INTEGRATION.md
docs/api_docs/: API.md
docs/cli_docs/: CLI.md
docs/library_docs/: LIBRARY.md
docs/llamaindex/: llamaindex_qdrant_search.md
docs/qdrant/: qdrant_docs.md
examples/: enhanced_gradio_ui.py  simple_gradio_ui.py
examples/core/: integration_examples.py  integration_polars_query.py  polars_query_examples.py
multimodal-db/: __init__.py
multimodal-db/api/: __init__.py  dependencies.py  main.py  run_api.py
multimodal-db/api/data/qdrant/api_vectors/: meta.json
multimodal-db/api/routers/: __init__.py  agents.py  conversations.py
multimodal-db/cli/: __init__.py  cli.py
multimodal-db/core/: __init__.py  agent_config.py  base_agent_config.py  conversation_generator.py  conversation_modes.py  graphiti_pipe.py  multimodal_db.py  polars_core.py  polars_db.py  qdrant_core.py  qdrant_db.py  qdrant_hybrid_search_llama_index.py  simple_ollama.py  vector_db.py
multimodal-db/core/agent_configs/: __init__.py  base_agent_config.py
multimodal-db/core/db_tools/: __init__.py  llamaindex_pandas_query_engine.py  llamaindex_polars_query_engine.py  llamaindex_qdrant_hybrid_search.py
multimodal-db/core/dbs/: __init__.py  graphiti_db.py  multimodal_db.py  polars_db.py  vector_db.py
package_reference_docs/graphiti/: graphiti_docs.md
package_reference_docs/llamaindex/: qdrant_llama_index_hybrid_search.md
package_reference_docs/polars/: polars_docs.md
package_reference_docs/qdrant/: qdrant_docs.md
scripts/: cleanup_agents.py  initialize_corecoder.py
tests/: System_Test_Demo.ipynb  test_database_paths.py  test_integration.py  test_optimized.py  test_qdrant_integration.py
tests/core/db_tools/: test_polars_query.py  test_polars_simple.py
