[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-db"
version = "0.1.0-alpha"
description = "A comprehensive data management layer for AI agents with multi-database support, vector search, and RAG capabilities"
authors = [
    {name = "xXSup3rN0v4Xx"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "agents", "database", "vector-search", "rag", "polars", "qdrant", "llama-index"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core Data Processing
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    
    # Vector Database & Search
    "qdrant-client>=1.7.0",
    
    # LlamaIndex RAG Framework
    "llama-index>=0.10.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "llama-index-experimental>=0.2.0",
    
    # Machine Learning & Embeddings
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    
    # API & HTTP Clients
    "httpx>=0.24.0",
    "requests>=2.31.0",
    
    # Data Validation & Serialization
    "pydantic>=2.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
]

graphdb = [
    "graphiti-core>=0.3.0",
    "neo4j>=5.0.0",
]

ml-extras = [
    "torch>=2.0.0",
    "tokenizers>=0.13.0",
]

api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]

multimodal = [
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "librosa>=0.10.0",
]

all = [
    "multimodal-db[dev,graphdb,ml-extras,api,notebooks,multimodal]"
]

[project.urls]
Homepage = "https://github.com/xXSup3rN0v4Xx/multimodal-db"
Repository = "https://github.com/xXSup3rN0v4Xx/multimodal-db"
Documentation = "https://github.com/xXSup3rN0v4Xx/multimodal-db/blob/main/README.md"
Issues = "https://github.com/xXSup3rN0v4Xx/multimodal-db/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["multimodal_db*"]

[tool.setuptools.package-data]
"multimodal_db" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "llama_index.*",
    "graphiti_core.*",
    "sentence_transformers.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]